--- a/shop.html
+++ b/shop.html
@@ -71,6 +71,22 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
     z-index: 2;
 }
 
+/* Proteção da logo */
+.logo-wrapper {
+  position: relative;
+  display: inline-block;
+}
+.logo-wrapper img {
+  pointer-events: none;
+  user-select: none;
+}
+.logo-wrapper .overlay {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  z-index: 2;
+}
+
 .card-body { padding: 15px; text-align: center; }
 .card-body h5 { margin-bottom: 10px; font-weight: 600; }
 .card-body p { margin-bottom: 10px; font-weight: 500; color: #2b2f33; font-size: 1.1rem; }
@@ -82,7 +98,10 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
 <header class="topbar">
 <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
-        <img src="https://i.imgur.com/SP9nsky.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;">
+        <div class="logo-wrapper">
+          <img src="https://i.imgur.com/SP9nsky.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;">
+          <div class="overlay"></div>
+        </div>
         <div class="logo">021 CUSTOMS</div>
     </div>
     <nav class="d-none d-md-flex align-items-center nav-links">
@@ -126,6 +145,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
       </div>
     </div>
 
+    <!-- Repita o mesmo padrão para os demais 13 produtos -->
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/aPBw9Bl.png" alt="Stryder"><div class="overlay"></div></div>
