Update relatorio.html for vehicle report

--- a/relatorio.html
+++ b/relatorio.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>021 CUSTOMS - RELATÓRIO DE ITEM - MECÂNICA</title>
+<title>021 CUSTOMS - RELATÓRIO DE VEICULOS EXCLUSIVO - MECÂNICA</title>
 <link rel="icon" type="image/x-icon" href="https://i.imgur.com/SP9nsky.png">
 
 <!-- Bootstrap 5 -->
@@ -65,7 +65,7 @@ button.send-btn:hover { background-color: #4752c4; }
 
 <!-- Relatório -->
 <div class="calc-container">
-    <h1>Relatório de Item</h1>
+    <h1>Relatório de Veiculos Exclusivos</h1>
 
     <label>Nome do Mecânico Responsável:</label>
     <input type="text" id="nomeVendedor" placeholder="Apenas letras">
@@ -194,3 +194,4 @@ function enviarDiscord(){
 
 </body>
 </html>
+
