--- a/shop.html
+++ b/shop.html
@@ -110,7 +110,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <a href="shop.html">Loja</a>
         <a href="relatorio.html">Relatorio</a>
         <a href="funcionarios.html">Funcionarios</a>
-        <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
+        <a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn">
             <i class="fa-brands fa-discord"></i> Discord
         </a>
     </nav>
@@ -122,117 +122,94 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
   <h2 class="mb-4 text-center">Loja Exclusiva da Mecânica</h2>
   <div class="row justify-content-center g-4">
 
-    <!-- Lista completa de 16 produtos -->
-    <div class="col-sm-6 col-md-4 d-flex justify-content-center">
-      <div class="card card-item">
-        <div class="img-wrapper"><img src="https://imgur.com/je5gY9B.png" alt="Mercedes 63"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Mercedes 63</h5><p>Valor: R$ 14.000.000,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
-      </div>
-    </div>
-
-    <div class="col-sm-6 col-md-4 d-flex justify-content-center">
-      <div class="card card-item">
-        <div class="img-wrapper"><img src="https://imgur.com/IGpQnUj.png" alt="Skyline R34"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Skyline R34</h5><p>Valor: R$ 14.000.000,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
-      </div>
-    </div>
-
-    <div class="col-sm-6 col-md-4 d-flex justify-content-center">
-      <div class="card card-item">
-        <div class="img-wrapper"><img src="https://imgur.com/L8V0il3.png" alt="Moto Yamaha R1"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Moto Yamaha R1</h5><p>Valor: R$ 5.000.500,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
-      </div>
-    </div>
-
-    <!-- Repita o mesmo padrão para os demais 13 produtos -->
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/aPBw9Bl.png" alt="Stryder"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Stryder</h5><p>Valor: R$ 5.000.000,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>Stryder</h5><p>Valor: R$ 5.000.000,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/ovekEwm.png" alt="Chimera"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Chimera</h5><p>Valor: R$ 4.000.000,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>Chimera</h5><p>Valor: R$ 4.000.000,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/AuM201l.png" alt="Comet"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Comet</h5><p>Valor: R$ 11.000.000,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>Comet</h5><p>Valor: R$ 11.000.000,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/qonEpJm.png" alt="Gburrito"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Gburrito</h5><p>Valor: R$ 4.000.000,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>Gburrito</h5><p>Valor: R$ 4.000.000,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/w8KEmMt.png" alt="Mule"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Mule</h5><p>Valor: R$ 3.000.500,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>Mule</h5><p>Valor: R$ 3.000.500,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/mfRRRAp.png" alt="Sanchez"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Sanchez</h5><p>Valor: R$ 4.000.500,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>Sanchez</h5><p>Valor: R$ 4.000.500,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/A3gJZtd.png" alt="Sanctus"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Sanctus</h5><p>Valor: R$ 4.000.500,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>Sanctus</h5><p>Valor: R$ 4.000.500,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/S4BBsD5.png" alt="Weevil"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Weevil</h5><p>Valor: R$ 4.000.000,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>Weevil</h5><p>Valor: R$ 4.000.000,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/DHzEFbh.png" alt="GT"><div class="overlay"></div></div>
-        <div class="card-body"><h5>GT</h5><p>Valor: R$ 7.000.000,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>GT</h5><p>Valor: R$ 7.000.000,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/uztvTRq.png" alt="Chimera"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Chimera</h5><p>Valor: R$ 4.000.000,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>Chimera</h5><p>Valor: R$ 4.000.000,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/vFjmLbw.png" alt="Dominator"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Dominator</h5><p>Valor: R$ 6.000.000,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>Dominator</h5><p>Valor: R$ 6.000.000,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/woeZHEk.png" alt="Faggio"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Faggio</h5><p>Valor: R$ 1.000.000,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>Faggio</h5><p>Valor: R$ 1.000.000,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
     <div class="col-sm-6 col-md-4 d-flex justify-content-center">
       <div class="card card-item">
         <div class="img-wrapper"><img src="https://imgur.com/HjNYBdL.png" alt="Sabre GT"><div class="overlay"></div></div>
-        <div class="card-body"><h5>Sabre GT</h5><p>Valor: R$ 8.000.000,00</p><a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
+        <div class="card-body"><h5>Sabre GT</h5><p>Valor: R$ 8.000.000,00</p><a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Comprar</a></div>
       </div>
     </div>
 
@@ -256,6 +233,7 @@ document.getElementById('year').textContent = new Date().getFullYear();
 
 </body>
 </html>
+
 
 
 
