--- a/tabela.html
+++ b/tabela.html
@@ -80,7 +80,7 @@ th{background:#f1f1f1}
 
 <a href="funcionarios.html">Funcionários</a>
 
-<a href="https://discord.com/invite/wunSmxVt" class="discord-btn">
+<a href="https://discord.gg/YuUsJGfH" class="discord-btn">
 <i class="fa-brands fa-discord"></i> Discord
 </a>
 </nav>
@@ -198,4 +198,5 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
