--- a/reparo.html
+++ b/reparo.html
@@ -84,7 +84,7 @@ user-select:none;
 <a href="relatorio.html">Relatório</a>
 <a href="#">Termos de Uso</a>
 <a href="funcionarios.html">Funcionários</a>
-<a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
+<a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn">
 <i class="fa-brands fa-discord"></i> Discord
 </a>
 </nav>
@@ -219,3 +219,4 @@ function limpar(){
 
 </body>
 </html>
+
