--- a/relatorio.html
+++ b/relatorio.html
@@ -55,7 +55,7 @@ button.send-btn:hover { background-color: #4752c4; }
         <a href="shop.html">Loja</a>
         <a href="relatorio.html">Relatorio</a>
         <a href="funcionarios.html">Funcionarios</a>
-        <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
+        <a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn">
             <i class="fa-brands fa-discord"></i> Discord
         </a>
     </nav>
@@ -193,5 +193,6 @@ function enviarDiscord(){
 
 </body>
 </html>
+
 
 
