--- a/pagamento.html
+++ b/pagamento.html
@@ -44,7 +44,7 @@ button{width:100%;padding:10px;margin-top:12px;border:none;border-radius:8px;fon
 <a href="shop.html">Loja</a>
 <a href="relatorio.html">Relatório</a>
 <a href="funcionarios.html">Funcionários</a>
-<a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Discord</a>
+<a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn"><i class="fa-brands fa-discord"></i> Discord</a>
 </nav>
 </div>
 </header>
@@ -146,3 +146,4 @@ function limpar(){
 </body>
 
 </html>
+
