--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <a href="shop.html">Loja</a>
         <a href="relatorio.html">Relatório</a>
         <a href="funcionarios.html">Funcionários</a>
-        <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
+        <a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn">
             <i class="fa-brands fa-discord"></i> Discord
         </a>
     </nav>
@@ -269,5 +269,6 @@ toggler.addEventListener('click', () => {
 
 </body>
 </html>
+
 
 
