--- a/funcionarios.html
+++ b/funcionarios.html
@@ -117,7 +117,7 @@ body {
       <a href="shop.html">Loja</a>
       <a href="relatorio.html">Relatório</a>
       <a href="funcionarios.html">Funcionários</a>
-      <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
+      <a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn">
         <i class="fa-brands fa-discord"></i> Discord
       </a>
     </nav>
@@ -222,4 +222,5 @@ document.addEventListener('dragstart', e => e.preventDefault());
 
 </body>
 </html>
+
 
