--- a/certificado.html
+++ b/certificado.html
@@ -50,7 +50,7 @@ body {
       <a href="shop.html">Loja</a>
       <a href="relatorio.html">Relatório</a>
       <a href="funcionarios.html">Funcionários</a>
-      <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
+      <a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn">
         <i class="fa-brands fa-discord"></i> Discord
       </a>
     </nav>
@@ -176,5 +176,6 @@ function enviarParaDiscord(pdfDoc, nome, instrutor, curso){
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
