--- a/calculadora.html
+++ b/calculadora.html
@@ -59,7 +59,7 @@ button:hover {transform: scale(1.03);}
     <a href="relatorio.html">Relatório</a>
     <a href="#">Termos de Uso</a>
     <a href="funcionarios.html">Funcionários</a>
-    <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
+    <a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn">
       <i class="fa-brands fa-discord"></i> Discord
     </a>
   </nav>
@@ -279,6 +279,7 @@ document.addEventListener('keydown', e => {
 
 </body>
 </html>
+
 
 
 
