--- a/calculadora.html
+++ b/calculadora.html
@@ -72,7 +72,7 @@ button:hover {transform: scale(1.03);}
     <!-- ================= TUNAGEM ================= -->
     <div class="col-md-4">
       <div class="card h-100">
-        <div class="card-header">TUNAGEM</div>
+        <div class="card-header">TUNAGEM/ESTÉTICA</div>
         <div class="card-body overflow-auto" style="max-height:600px;">
           <!-- Lista completa de itens de TUNAGEM -->
           <div class="form-check"><input class="form-check-input item" data-nome="Motor" data-valor="150000" type="checkbox"><label> Motor</label></div>
@@ -105,7 +105,7 @@ button:hover {transform: scale(1.03);}
     <!-- ================= ESTÉTICA ================= -->
     <div class="col-md-4">
       <div class="card h-100">
-        <div class="card-header">ESTÉTICA</div>
+        <div class="card-header">TUNAGEM/ESTÉTICA</div>
         <div class="card-body overflow-auto" style="max-height:600px;">
           <!-- Lista completa de itens de ESTÉTICA -->
           <div class="form-check"><input class="form-check-input item" data-nome="Pintura Primária" data-valor="30000" type="checkbox"><label> Pintura Primária</label></div>
@@ -278,6 +278,7 @@ document.addEventListener('keydown', e => {
 
 </body>
 </html>
+
 
 
 
